--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,19 @@ proguard/
 # Android Studio captures folder
 captures/
 
-# Intellij
+# IntelliJ/Android Studio project files
+.idea/
 *.iml
-.idea/workspace.xml
+*.ipr
+*.iws
 
 # Keystore files
 *.jks
+
+# Eclipse project files
+.settings/
+.project
+.classpath
+
+# Mac OS files
+.DS_Store
